--- a/quiz.html
+++ b/quiz.html
@@ -7,6 +7,26 @@
     <title>Triangle Quiz</title>
 </head>
 <body>
+
+
+    <nav class="navigation container">
+        <div class="navBrand">Learn Triangles</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link link-active" href="">Is Triangles</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/quiz.html">Quiz</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="hypotenuse.html">Hypotenuse</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="area.html">Area</a>
+            </li>
+        </ul>
+    </nav>
+
     <h1>Triangle Quiz</h1> <label></label>
     <form class="quiz-form">
         <div class="question-container">
