added styling to all files

--- a/istriangle.html
+++ b/istriangle.html
@@ -26,6 +26,8 @@
             </li>
         </ul>
     </nav>
+
+    <h1 class="hero hero-heading container-center">Check if these angles make a triangle</h1> 
     
     <div class=" container container-center">
         <div class="section ow">
