--- a/area.html
+++ b/area.html
@@ -4,17 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
     <title>Area</title>
 </head>
 <body>
 
-    <label for="base"> Base</label>
-    <input type="number" id="base">
+    <nav class="navigation container">
+        <div class="navBrand">Learn Triangles</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link link-active" href="/istriangle.html">Is Triangles</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/quiz.html">Quiz</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="hypotenuse.html">Hypotenuse</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="area.html">Area</a>
+            </li>
+        </ul>
+    </nav>
+
+    <div class="container container-center">
+        <h1 class="hero hero-heading container-center">Enter base and height to find the area of Triangle</h1> 
+    <label for="base" style="margin-top: 5rem;"> Base</label>
+    <input type="number" class="angle-input" id="base">
     <label for="height"> Height</label>
-    <input type="number" id="height">
-    <button id="calculate"> Calculate</button>
-    <h1 id="output"></h1>
+    <input type="number" class="angle-input" id="height">
+    <button id="calculate" class="link primary-link checkBtn"> Calculate</button>
+
+    </div>
+    <h1 id="output" class="container container-center hero hero-heading"></h1>
     
+    <footer class="footer">
+        <div class="footer-header">You can find me on</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline "><a class="link" href="https://github.com/AravindHarihar">GitHub</a></li>
+            <li class="list-item-inline "><a class="link" href="https://github.com/AravindHarihar">Twitter</a></li>
+            <li class="list-item-inline "><a class="link" href="https://github.com/AravindHarihar">Instagram</a></li>
+        </ul>
+    </footer>
 
     <script src="/area.js"></script>
 </body>
