--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -4,17 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
     <title>Hypotenuse</title>
 </head>
 <body>
+
+    <nav class="navigation container">
+        <div class="navBrand">Learn Triangles</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link link-active" href="/istriangle.html">Is Triangles</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="/quiz.html">Quiz</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="hypotenuse.html">Hypotenuse</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="area.html">Area</a>
+            </li>
+        </ul>
+    </nav>
+
+    <div class="container container-center">
     <h1>Calculate Hypotenuse</h1>
     <label for=""> a = </label>
-    <input type="number" class="side-input">
+    <input type="number" class="side-input"> <br>
     <label for=""> b = </label>
     <input type="number" class="side-input">
-    <button id="hypotenuse-btn"> Calculate Hypotenuse</button>
-    <div id="output"></div>
+    <button id="hypotenuse-btn" class="link primary-link checkBtn"> Calculate Hypotenuse</button>
+    <div style="margin-top: 2rem;" id="output"></div>
+
+    </div>
     <script src="/hypotenuse.js"></script>
+
+
+    <footer class="footer">
+        <div class="footer-header">You can find me on</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline "><a class="link" href="https://github.com/AravindHarihar">GitHub</a></li>
+            <li class="list-item-inline "><a class="link" href="https://github.com/AravindHarihar">Twitter</a></li>
+            <li class="list-item-inline "><a class="link" href="https://github.com/AravindHarihar">Instagram</a></li>
+        </ul>
+    </footer>
     
 </body>
 </html>
