--- a/istriangle.html
+++ b/istriangle.html
@@ -10,7 +10,7 @@
 <body>
 
     <nav class="navigation container">
-        <div class="navBrand">Learn Triangles</div>
+        <div><a href="/index.html" class="list-non-bullet nav-pills" style="font-weight: bolder; color: white;">Learn Triangles</a></div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link link-active" href="">Is Triangles</a>
