--- a/area.html
+++ b/area.html
@@ -10,10 +10,10 @@
 <body>
 
     <nav class="navigation container">
-        <div class="navBrand">Learn Triangles</div>
+        <div><a href="/index.html" class="list-non-bullet nav-pills" style="font-weight: bolder; color: white;">Learn Triangles</a></div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link link-active" href="/istriangle.html">Is Triangles</a>
+                <a class="link" href="/istriangle.html">Is Triangles</a>
             </li>
             <li class="list-item-inline">
                 <a class="link" href="/quiz.html">Quiz</a>
@@ -22,7 +22,7 @@
                 <a class="link" href="hypotenuse.html">Hypotenuse</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="area.html">Area</a>
+                <a class="link link-active" href="area.html">Area</a>
             </li>
         </ul>
     </nav>
