--- a/quiz.html
+++ b/quiz.html
@@ -11,13 +11,13 @@
 
 
     <nav class="navigation container">
-        <div class="navBrand">Learn Triangles</div>
+        <div><a href="/index.html" class="list-non-bullet nav-pills" style="font-weight: bolder; color: white;">Learn Triangles</a></div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link link-active" href="/istriangle.html">Is Triangles</a>
+                <a class="link" href="/istriangle.html">Is Triangles</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/quiz.html">Quiz</a>
+                <a class="link link-active" href="/quiz.html">Quiz</a>
             </li>
             <li class="list-item-inline">
                 <a class="link" href="hypotenuse.html">Hypotenuse</a>
@@ -55,7 +55,7 @@
     </form>
 
     <button class="link primary-link container container-center" style="margin-left: 45%;" id="submit-answers-btn"> Submit Answers</button>
-    <div id="output"></div>
+    <div id="output" class="container container-center hero hero-heading"></div>
 
     <footer class="footer">
         <div class="footer-header">You can find me on</div>
