--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -33,7 +33,7 @@
     <input type="number" class="side-input"> <br>
     <label for=""> b = </label>
     <input type="number" class="side-input">
-    <button id="hypotenuse-btn" class="link primary-link checkBtn"> Calculate Hypotenuse</button>
+    <button id="hypotenuse-btn" class="link primary-link checkBtn" style="cursor: pointer;"> Calculate Hypotenuse</button>
     <div style="margin-top: 2rem;" id="output"></div>
 
     </div>
