--- a/istriangle.html
+++ b/istriangle.html
@@ -43,10 +43,10 @@
             <label for="angle1">Enter angle three</label>
             <input type="number" class="angle-input"/>
         </div>
-        <a class="link primary-link checkBtn" id="is-triangle-btn"> Is Triangle?</a>
+        <a class="link primary-link checkBtn" style="cursor: pointer;" id="is-triangle-btn"> Is Triangle?</a>
         
         <!-- <button id="is-triangle-btn">Check</button> -->
-        <div id="output" class="hero hero-heading"></div>
+        <h1 id="output" class="hero hero-heading"></h1>
 
     </div>
 
