--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -28,15 +28,15 @@
     </nav>
 
     <div class="container container-center">
-    <h1>Calculate Hypotenuse</h1>
-    <label for=""> a = </label>
-    <input type="number" class="side-input"> <br>
-    <label for=""> b = </label>
-    <input type="number" class="side-input">
-    <button id="hypotenuse-btn" class="link primary-link checkBtn" style="cursor: pointer;"> Calculate Hypotenuse</button>
-    <div style="margin-top: 2rem;" id="output"></div>
-
+        <h1>Calculate Hypotenuse</h1>
+        <label for=""> a = </label>
+        <input type="number" class="side-input"> <br>
+        <label for=""> b = </label>
+        <input type="number" class="side-input">
+        <button id="hypotenuse-btn" class="link primary-link checkBtn" style="cursor: pointer;"> Calculate Hypotenuse</button>
     </div>
+
+    <h1 style="margin-top:2rem; text-align: center;" id="output"></h1>
     <script src="/hypotenuse.js"></script>
 
 
