--- a/istriangle.html
+++ b/istriangle.html
@@ -50,7 +50,7 @@
 
     </div>
 
-    <footer class="footer">
+    <footer class="footer" style="margin-top: 20%;">
         <div class="footer-header">You can find me on</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline "><a class="link" href="https://github.com/AravindHarihar">GitHub</a></li>
