--- a/area.html
+++ b/area.html
@@ -38,12 +38,12 @@
     </div>
     <h1 id="output" class="container container-center hero hero-heading"></h1>
     
-    <footer class="footer">
+    <footer class="footer" style="margin-top: 100px;">
         <div class="footer-header">You can find me on</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline "><a class="link" href="https://github.com/AravindHarihar">GitHub</a></li>
-            <li class="list-item-inline "><a class="link" href="https://github.com/AravindHarihar">Twitter</a></li>
-            <li class="list-item-inline "><a class="link" href="https://github.com/AravindHarihar">Instagram</a></li>
+            <li class="list-item-inline "><a class="link" href="https://github.com/aravind_harihar">Twitter</a></li>
+            <li class="list-item-inline "><a class="link" href="https://in.linkedin.com/in/aravind-harihar-a4036179">Linkedin</a></li>
         </ul>
     </footer>
 
