footer style changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
 
 
-    <div class="container container-center">
+    <div class="container container-center" style="margin-bottom: 5rem ;">
         <div class="container container-center">
             <div class="section ow">
                 <h2>Is Triangle?</h2>
