added extra questions to quiz

--- a/quiz.html
+++ b/quiz.html
@@ -50,6 +50,20 @@
             <label><input type="radio" name="question3" value="four"> four</label>
         </div>
 
+        <div class="question-container section container-center">
+            <p>What is the longest side of a right-angled triangle called?</p>
+            <label><input type="radio" name="question4" value="base"> base </label>
+            <label><input type="radio" name="question4" value="side"> side </label>
+            <label><input type="radio" name="question4" value="hypotenuse"> hypotenuse </label>
+        </div>
+
+        <div class="question-container section ow container-center">
+            <p>If you cut a square diagonally, how many triangles do you get?</p>
+            <label><input type="radio" name="question5" value="two"> two </label>
+            <label><input type="radio" name="question5" value="three"> three </label>
+            <label><input type="radio" name="question5" value="four"> four</label>
+        </div>
+
         
         
     </form>
